--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Mundo Invertido</title>
   </head>
 
-  <body class="light-theme" aria-label="O site está utilizando o tema light" role="body">
+  <body class="dark-theme" aria-label="O site está utilizando o tema light" role="body">
 
     <header aria-label="Cabeçalho da página.">
 
@@ -175,5 +175,12 @@
     </footer>
     
     <script type="module" src="#"></script>
+
+    <script>
+        function switchTheme() {
+            document.body.classList.toggle('dark-theme');
+            document.body.classList.toggle('light-theme');
+        }
+    </script>
   </body>
 </html>
