--- a/index.html
+++ b/index.html
@@ -12,24 +12,25 @@
     <title>Mundo Invertido</title>
   </head>
 
-  <body class="dark-theme" aria-label="O site está utilizando o tema light" role="body">
+  <body class="light-theme" aria-label="O site está utilizando o tema light" role="body">
 
     <header aria-label="Cabeçalho da página.">
 
-      <audio id="music" autoplay>
-        <source src="assets/musics/normal-world.mpeg" aria-details="Audio do site" />
-      </audio>
+        <audio id="music" autoplay loop>
+            <source src="/assets/audios/inverted-world.mpeg" type="audio/mpeg"/>
+            Seu navegador não suporta a reprodução de áudio.
+        </audio>
+        
 
       <div class="header-content">
 
         <img class="invert-element" src="assets/images/banner/logo.svg" alt="Imagem principal Mundo Invertido. Semana Frontend DIO." />
 
         <p class="invert-element" role="text">
-          Uma jornada para quem não tem medo do desconhecido. O caminho para o
-          Mundo invertido é incerto, repleto de obstáculos e perigos. Porém, a
-          recompensa é grande: salvar Hawkings e o mundo todo das garras de
-          Vecna. Você está preparado? Então clique no botão abaixo para entrar
-          no Mundo Invertido!
+            Uma jornada para aqueles que não temem o desconhecido.
+            O caminho rumo ao Mundo Invertido é repleto de incertezas, desafios e perigos iminentes.
+            Mas a recompensa é grandiosa: salvar Hawkins e o mundo das garras de Vecna.
+            Você está pronto para essa aventura? Clique no botão abaixo e mergulhe no Mundo Invertido!
         </p>
 
         <button id="switch-theme-button" onclick="switchTheme()">Inverter Mundos</button>
@@ -51,10 +52,10 @@
           <h1>O Mundo Invertido</h1>
 
           <p role="text">
-            O Mundo Invertido parece uma cópia do nosso mundo, mas com criaturas
-            horrendas, tempestades assustadoras, muita escuridão e entidades
-            malignas. Um reino controlado por Vecna, que tem planos de trazer
-            tudo isso ao nosso mundo.
+            O Mundo Invertido é uma distorção aterrorizante do nosso mundo,
+            habitado por criaturas horrendas, tempestades ameaçadoras,
+            escuridão profunda e entidades malignas.
+            Sob o controle de Vecna, este reino sombrio trama trazer toda sua corrupção para o nosso mundo.
           </p>
 
         </div>
@@ -87,10 +88,9 @@
           <h2>Stranger Things Vol. 4</h2>
 
           <p role="text">
-            Mais experientes, os heróis de Stranger Things também precisam
-            enfrentar desafios maiores do que nunca e fazer decisões que vão
-            mudar suas vidas para sempre. Confira ao lado o trailer da quarta
-            temporada.
+            Mais experientes, os heróis de Stranger Things agora se deparam com desafios maiores do que nunca,
+            tendo que tomar decisões que transformarão suas vidas para sempre.
+            Não perca o trailer da quarta temporada ao lado!
           </p>
 
         </div>
@@ -126,11 +126,10 @@
         <h2>O Clube Dungeons & Dragons</h2>
 
         <p>
-          Para deter Vecna, os heróis de Stranger Things também precisam de
-          você. O Clube de D&D mais famoso de Hawkings está com vagas abertas
-          para sua próxima aventura. Se você é destemido, gosta de desafios e
-          não tem medo de rodar o D20, chegou a hora de se inscrever para fazer
-          parte da nova campanha.
+            Para deter Vecna, os heróis de Stranger Things precisam da sua ajuda!
+            O Clube de D&D mais famoso de Hawkins está recrutando para sua próxima aventura.
+            Se você é destemido, ama desafios e não tem medo de rolar o D20,
+            esta é a sua oportunidade de se inscrever e se juntar à nova campanha.
         </p>
 
         <div class="form-content">
@@ -166,8 +165,9 @@
     <footer>
 
       <p>
-        Projeto construído para fins didáticos, com o objetivo de colocar em
-        prática os conhecimentos de HTML, CSS e JavaScript aprendidos na DIO._
+        Projeto desenvolvido por mim para fins didáticos,
+        com o objetivo de aplicar os conhecimentos de HTML,
+        CSS e JavaScript adquiridos na DIO.
       </p>
 
       <img src="assets/images/footer/logo.svg" alt="">
